This change fixes a crash issue in WindowCapturerWin. The issue and fix are both obvious, WindowCapturerWin should not return Result::SUCCESS with an empty frame. This issue was original introduced into the code base in change https://codereview.webrtc.org/1988783003/.

I am also considering whether we should move the
previous_size_ = frame->size();
window_size_map_[window_] = previous_size_;
into the true branch. But since this change needs to be merged into M58 and M59,
I would prefer to keep it as small as possible.

BUG=712615

Review-Url: https://codereview.webrtc.org/2835553002
Cr-Commit-Position: refs/heads/master@{#17799}